Criação de Script em js

--- a/contato.html
+++ b/contato.html
@@ -24,18 +24,19 @@
             <div>
                 <form>
                     <label for="nome">Nome:</label><br>
-                    <input type="text" id="nome">
-                    <br>
+                    <input type="text" id="nome" onkeyup="validaNome()">
+                    <div id='txtNome'></div>
                     <br>
                     <label for="email">E-mail:</label><br>
-                    <input type="email" id="email">
-                    <br>
+                    <input type="email" id="email" onkeyup="validaEmail()">
+                    <div id='txtEmail'></div>
                     <br>
                     <label for="assunto">Assunto:</label><br>
-                    <textarea name="assunto" id="assunto" cols="60" rows="5"></textarea>
+                    <textarea name="assunto" id="assunto" cols="60" rows="5" onkeyup="validaAssunto()"></textarea>
+                    <div id='txtAssunto'></div>
                     <br>
                     <br>
-                    <button>Enviar</button>
+                    <button onclick="enviar()">Enviar</button>
                 </form>
             </div>
             <div class="ml-50">
@@ -46,8 +47,8 @@
                     476456284978504!3d-23.545317166885248!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.
                     1!3m3!1m2!1s0x94ce66dec98fb855%3A0xf2b061ffbcd2ecf8!2sNeo%20Qu%C3%ADmica
                     %20Arena!5e0!3m2!1spt-BR!2sbr!4v1612884643284!5m2!1spt-BR!2sbr"
-                    width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-                    tabindex="0">
+                    width="400" height="250" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
+                    tabindex="0" onmousemove="mapaZoom()" onmouseout="mapaNormal()" id='mapa'>
                 </iframe>
             </div>   
         </div>
@@ -69,7 +70,7 @@
 
         
 
-
+   <script src="assets/js/script.js"></script>
 </body>
 
 </html>
